LinkTemplates/FENetworkSecurityGroups.json
{
	"$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"name": {
			"type": "string"
		},
		"resourceGroupLocation": {
			"type": "string"
		}
	},
	"variables": {},
	"resources": [
		{
			"apiVersion": "2015-06-15",
			"type": "Microsoft.Network/networkSecurityGroups",
			"name": "[parameters('name')]",
			"location": "[parameters('resourceGroupLocation')]",
			"tags": {
				"displayName": "FrontEndNSG"
			},
			"properties": {
				"securityRules": [
					{
						"name": "rdp_rule",
						"properties": {
							"description": "Allow RDP",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "3389",
							"sourceAddressPrefix": "Internet",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 100,
							"direction": "Inbound"
						}
					},
					{
						"name": "web_rule",
						"properties": {
							"description": "Allow WEB",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "80",
							"sourceAddressPrefix": "Internet",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 101,
							"direction": "Inbound"
						}
					},
					{
						"name": "WinRM",
						"properties": {
							"description": "Allow WinRM",
							"protocol": "Tcp",
							"sourcePortRange": "*",
							"destinationPortRange": "5986",
							"sourceAddressPrefix": "Internet",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 102,
							"direction": "Inbound"
						}
					}
				]
			}
		}
	]
}
